kubernetes-deployment.example.yml
# optional - PersistentVolume only needed if local storage is used
# apiVersion: v1
# kind: PersistentVolume
# metadata:
#   name: local-meshcore
# spec:
#   capacity:
#    storage: 2Gi
#   volumeMode: Filesystem
#   accessModes:
#     - ReadWriteMany
#   persistentVolumeReclaimPolicy: Retain
#   storageClassName: generic
#   local:
#     path: <PATH-TO-LOCAL-MOUNT>                                   # absolut path - eg. "/mnt/data/meshcore/"
#   nodeAffinity:
#     required:
#       nodeSelectorTerms:
#       - matchExpressions:
#         - key: kubernetes.io/hostname
#           operator: In
#           values:
#           - <NODE-NAME>                                           # optional: name of node where local data exists
---
apiVersion: v1
kind: Namespace
metadata:
  name: meshcore
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: meshcore-ingress
  namespace: meshcore
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
#    cert-manager.io/cluster-issuer: "cloudflare-issuer"            # optional: handy if certmanager is used
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - meshcore.company.com                                          # set domain
    secretName: meshcore-certificate
  rules:
  - host: "meshcore.company.com"                                    # set domain
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: meshcore-service
            port:
              number: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: meshcore-deployment
  namespace: meshcore
  labels:
    app: remoteterm
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: remoteterm
  template:
    metadata:
      labels:
        app: remoteterm
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      containers:
      - name: remoteterm
        image: jkingsman/remoteterm-meshcore:latest                 # set version - do not use latest
        ports:
        - containerPort: 8000
        volumeMounts:
        - name: storage
          mountPath: /app/data
        - name: cache-volume # Add this
          mountPath: /.cache
      volumes:
      - name: storage
        persistentVolumeClaim:
          claimName: meshcore-data-pvc
      - name: cache-volume # Add this
        emptyDir: {}
---
# optional - PersistentVolume only needed if local storage is used
# apiVersion: v1
# kind: PersistentVolume
# metadata:
#   name: local-meshcore
# spec:
#   capacity:
#    storage: 2Gi
#   volumeMode: Filesystem
#   accessModes:
#     - ReadWriteMany
#   persistentVolumeReclaimPolicy: Retain
#   storageClassName: generic
#   local:
#     path: <PATH-TO-LOCAL-MOUNT>                                   # absolut path - eg. "/mnt/data/meshcore/"
#   nodeAffinity:
#     required:
#       nodeSelectorTerms:
#       - matchExpressions:
#         - key: kubernetes.io/hostname
#           operator: In
#           values:
#           - <NODE-NAME>                                           # optional: name of node where local data exists
---
apiVersion: v1
kind: Service
metadata:
  name: meshcore-service
  namespace: meshcore
spec:
  selector:
    app: remoteterm
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
